<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.dictionary_notebook.PronounsLesson">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/Button_i"
            style="@style/buttons_wrapped"
            android:text="@string/i_am"/>
        <Button
            android:id="@+id/Button_you1"
            style="@style/buttons_wrapped"
            android:text="@string/you_are1"/>
        <Button
            android:id="@+id/Button_she"
            style="@style/buttons_wrapped"
            android:text="@string/she_is"/>
        <Button
            android:id="@+id/Button_he"
            style="@style/buttons_wrapped"
            android:text="@string/he_is"/>
        <Button
            android:id="@+id/Button_it"
            style="@style/buttons_wrapped"
            android:text="@string/it_is"/>
        <Button
            android:id="@+id/Button_we"
            style="@style/buttons_wrapped"
            android:text="@string/we_are"/>
        <Button
            android:id="@+id/Button_you2"
            style="@style/buttons_wrapped"
            android:text="@string/you_are2"/>
        <Button
            android:id="@+id/Button_they"
            style="@style/buttons_wrapped"
            android:text="@string/they_are"/>

    </LinearLayout>
</ScrollView>
