<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.dictionary_notebook.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/alphabet"
            style="@style/lessonTitles"
            android:drawableLeft="@drawable/alphabet"
            android:text="@string/alphabet" />

        <TextView
            android:id="@+id/numbers"
            style="@style/lessonTitles"
            android:drawableLeft="@drawable/numbers"
            android:text="@string/numbers" />

        <TextView
            android:id="@+id/colors"
            style="@style/lessonTitles"
            android:drawableLeft="@drawable/colors"
            android:text="@string/colors" />

        <TextView
            android:id="@+id/pronouns"
            style="@style/lessonTitles"
            android:drawableLeft="@drawable/pronouns"
            android:text="@string/pronouns" />

        <TextView
            android:id="@+id/greetings"
            style="@style/lessonTitles"
            android:drawableLeft="@drawable/greetings"
            android:text="@string/greetings" />

        <TextView
            android:id="@+id/tests"
            style="@style/lessonTitles"
            android:drawableLeft="@drawable/test"
            android:text="@string/test" />
    </LinearLayout>
</ScrollView>
