<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TestLesson">

    <TextView
        style="@style/questionTitle"
        android:drawableLeft="@drawable/test"
        android:drawableStart="@drawable/test"
        android:text="@string/condition_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/test_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="16dp"
            android:text="Hello"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/test_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/option1"
                style="@style/radio_buttons_test"
                android:layout_marginBottom="2dp"
                android:text="Добро утро" />

            <RadioButton
                android:id="@+id/option2"
                style="@style/radio_buttons_test"
                android:layout_marginBottom="2dp"
                android:text="Довиждане" />

            <RadioButton
                android:id="@+id/option3"
                style="@style/radio_buttons_test"
                android:layout_marginBottom="16dp"
                android:text="Здравей" />
        </RadioGroup>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/checkButton"
            style="@style/buttons_wrapped"
            android:layout_gravity="start"
            android:layout_marginLeft="16dp"
            android:onClick="displayCorrectAnswer"
            android:text="@string/check" />

        <Button
            android:id="@+id/nextButton"
            style="@style/buttons_wrapped"
            android:textColor="@drawable/disabled_color"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="16dp"
            android:enabled="false"
            android:onClick="restartTest"
            android:text="@string/next" />
    </RelativeLayout>
</LinearLayout>
